# glola

./: Cargo.toml  README.md  wsl-terminal-0.8.13.7z
artnet/: Cargo.toml
artnet/src/command/: mod.rs  poll_reply.rs
examples/: arnet.rs  cli.rs  gli.rs
examples/config/: 10X10.json  10X10_top.json  10X40.json  20x20.json  40x40.json  50000X50000.json  500X500.json  50X50.json
src/: client.rs  dmx.rs  glola.rs  lib.rs  matrix.rs  options.rs  prelude.rs  screen.rs
src/encoder/: artnet.rs  debug.rs  mod.rs
tool/debug-matrix/: Cargo.toml
