[package]
name = "glola"
version = "0.1.0"
authors = ["MooreDev <asya.corbeau@get-moore.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = ""
failure = "0.1.5"
derive_more = "0.15.0"
static_assertions = "0.3.4"
termion = "1.5.3"
serde = "1.0"
serde_json = "1.0"
gif = "0.10.2"
picto = "0.4.3"
hexdump = "0.1.0"