[package]
name = "glola"
version = "0.1.0"
authors = ["MooreDev <asya.corbeau@get-moore.com>"]
edition = "2018"

[dependencies]
actix-web = ""
failure = "0.1.5"
derive_more = "0.15.0"
static_assertions = "0.3.4"
termion = "1.5.3"
serde = "1.0"
serde_json = "1.0"
gif = "0.10.2"
picto = "0.4.3"
hexdump = "0.1.0"
clap = "2.33.0"
log = "0.4.8"
env_logger = "0.6.2"
fps_counter = "1.0.0"
sdl2 = "0.32.2"
artnet_protocol = { path="./artnet" }
